--- a/frontend/week3/index.html
+++ b/frontend/week3/index.html
@@ -3,9 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
     <title>ASINGURA K PHILIP</title>
 </head>
 <body>
+    <button id="dark-mode-toggle">Dark Mode</button>
     <h1>ASINGURA K PHILIP</h1>
     <p>Hello there <br> My name is Asingura K Philip, a student at Uganda Christian University 
         pursuing a bachelors degree in Computer science. <br>This is my portfolio website </p>
@@ -69,5 +71,7 @@
     <h2>Contact section</h2>
     <p>email: nguraphil@gmail.com</p>
     <p>Github: Asingura-Philip</p>
+
+    <script src="script.js"></script>
 </body>
 </html>
